<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="auto_reply1">Busy</string>
    <string name="reply_message1">Sorry, busy driving</string>

    <string name="auto_reply2">Call later</string>
    <string name="reply_message2">Can\'t talk right now, call you back later</string>

    <string name="auto_reply3">Lol</string>
    <string name="reply_message3">Lol</string>


    <string name="app_name">FakeNotifications</string>
    <string name="main_activity_name">Messages</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_new_message">Text Message</string>
    <string name="title_activity_phone_call">Phone Call</string>
    <string name="mtm_accept_cert">Accept Unknown Certificate?</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority.</string>
    <string name="mtm_accept_servername">Accept Mismatching Server Name?</string>
    <string name="mtm_hostname_mismatch">Server could not authenticate as \&quot;%s\&quot;. The certificate is only valid for:</string>

    <string name="mtm_connect_anyway">Do you want to connect anyway?</string>
    <string name="mtm_cert_details">Certificate details:</string>

    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>

    <string name="mtm_notification">Certificate Verification</string>

</resources>
